--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -113,12 +113,10 @@ repos:
     hooks:
       - id: python-safety-dependencies-check
 
-  - repo: https://github.com/jazzband/pip-tools
-    rev: 6.0.1
+  - repo: https://gitlab.com/smop/pre-commit-hooks
+    rev: v1.0.0
     hooks:
-      - id: pip-compile
-        files: ^requirements/production\.(in|txt)$
-        args: [requirements/production.in]
+      - id: check-poetry
 
   - repo: https://github.com/asottile/pyupgrade
     # Automatically upgrade syntax for newer versions of the language.
