--- a/copier-python-template/.pre-commit-config.yaml
+++ b/copier-python-template/.pre-commit-config.yaml
@@ -113,6 +113,11 @@ repos:
     hooks:
       - id: python-safety-dependencies-check
 
+  - repo: https://gitlab.com/smop/pre-commit-hooks
+    rev: v1.0.0
+    hooks:
+      - id: check-poetry
+
   - repo: https://github.com/jazzband/pip-tools
     rev: 6.0.1
     hooks:
