--- a/copier.yml
+++ b/copier.yml
@@ -27,11 +27,14 @@ _skip_if_exists:
 #   - python _copier_post_generation.py
 #   # Initialize poetry and git
 #   - git log &>/dev/null || poetry lock -q
-#   - git log &>/dev/null || poetry show --tree | grep '^\w' | awk '{ print $1 }' | sed 's/$/@latest/' | xargs poetry add -Dq
+#   - git log &>/dev/null || poetry show --tree | grep '^\w' | awk '{
+#     print $1 }' | sed 's/$/@latest/' | xargs poetry add -Dq
 #   - git log &>/dev/null || git init
 #   - git log &>/dev/null || git add --all
 #   - git log &>/dev/null || git commit -qm 'initial commit'
-#   - git log &>/dev/null || echo gh repo create -y {{repo_username}}/{{repo_name}} {% if private %}--private{% else %}--public{% endif %}
+#   - git log &>/dev/null || echo gh repo create -y
+#     {{repo_username}}/{{repo_name}} {% if private %}--private{% else
+#     %}--public{% endif %}
 
 # ====== QUESTIONS ======
 project_name:
@@ -84,4 +87,4 @@ doc_dir:
 
 docker:
   type: bool
-  default: False
+  default: false
