--- a/copier-python-template/.pre-commit-config.yaml
+++ b/copier-python-template/.pre-commit-config.yaml
@@ -144,7 +144,7 @@ repos:
   - repo: https://github.com/jumanjihouse/pre-commit-hooks
     rev: 2.1.5
     hooks:
-      # - id: bundler-audit
+      # - id: bundler-audit  # FIXME: Fix ruby hooks
       # - id: check-mailmap
       # - id: fasterer
       # - id: forbid-binary
