--- a/.github/workflows/cronjobs.yml
+++ b/.github/workflows/cronjobs.yml
@@ -19,6 +19,29 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: misspell
+        uses: reviewdog/action-misspell@v1
+        with:
+          github_token: ${{ secrets.github_token }}
+          locale: "US"
+
+      - name: Install shfmt
+        run: |
+          sudo apt update
+          sudo apt install snapd
+          sudo snap install shfmt
+
+      - name: Install hadolint
+        run: |
+          sudo wget --output-file /bin/hadolint \
+              https://github.com/hadolint/hadolint/releases/download/v2.3.0/hadolint-Linux-x86_64
+          sudo chmod +x /bin/hadolint
+
+      - name: Install poetry
+        run: |
+          sudo curl --location --show-error --silent \
+              https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python -
+
       - uses: browniebroke/pre-commit-autoupdate-action@v1.0.0
 
       - uses: peter-evans/create-pull-request@v3
