--- a/copier-python-template/.pre-commit-config.yaml
+++ b/copier-python-template/.pre-commit-config.yaml
@@ -156,7 +156,7 @@ repos:
       # - id: fasterer
       # - id: forbid-binary
       # - id: git-check  # Configure in .gitattributes
-      - id: git-dirty  # Configure in .gitignore
+      # - id: git-dirty  # Configure in .gitignore
       # - id: markdownlint  # Configure in .mdlrc
       # - id: reek
       # - id: require-ascii
