--- a/copier-python-template/.pre-commit-config.yaml
+++ b/copier-python-template/.pre-commit-config.yaml
@@ -5,41 +5,51 @@
 # Which of these should have stages?
 
 repos:
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v3.4.0
-    hooks:
+    - repo: https://github.com/pre-commit/pre-commit-hooks
+      rev: v4.1.0
+      hooks:
       # General
-      - id: check-added-large-files
-      - id: check-case-conflict
-      - id: check-docstring-first
-      - id: check-executables-have-shebangs
-      - id: check-merge-conflict
-      - id: check-symlinks
-      - id: check-toml
-      - id: check-xml
-      - id: check-yaml
-      - id: detect-private-key
-      - id: double-quote-string-fixer
-      - id: end-of-file-fixer
-      - id: mixed-line-ending  # Replaces or checks mixed line ending.
-      - id: trailing-whitespace
+          - id: check-added-large-files
+          - id: check-case-conflict
+          - id: check-executables-have-shebangs
+          - id: check-merge-conflict
+          - id: check-symlinks
+          - id: check-toml
+          - id: check-xml
+          - id: check-yaml
+          - id: detect-private-key
+          - id: double-quote-string-fixer
+          - id: end-of-file-fixer
+          - id: fix-byte-order-marker
+          - id: mixed-line-ending # Replaces or checks mixed line ending.
+          - id: trailing-whitespace
 
       # Json
-      - id: check-json
-      - id: pretty-format-json  # Checks that all your JSON files are pretty.
+          - id: check-json
+          - id: pretty-format-json # Checks that all your JSON files are pretty.
 
       # Python
-      - id: check-ast  # Check whether files parse as valid python.
-      - id: check-builtin-literals  # Require literal syntax when initializing empty or zero Python builtin types.
-      - id: debug-statements  # Check for debugger imports and py37+ breakpoint() calls in python source.
-      - id: name-tests-test  # Assert that files in tests/ end in _test.py, or optionally test*.py
+          - id: check-ast # Check whether files parse as valid python.
+          - id: check-builtin-literals # Require literal syntax when initializing empty or zero Python builtin types.
+          - id: check-docstring-first
+          - id: debug-statements # Check for debugger imports and py37+ breakpoint() calls in python source.
+          - id: name-tests-test # Assert that files in tests/ end in _test.py, or optionally test*.py
+          - id: requirements-txt-fixer
 
   # General
 
-  - repo: https://github.com/sirosen/fix-smartquotes
-    rev: 0.2.0
-    hooks:
-      - id: fix-smartquotes
+  # - repo: https://github.com/Yelp/detect-secrets
+  #   rev: v1.0.3
+  #   hooks:
+  #     - id: detect-secrets
+  #       args: ['--baseline', '.secrets.baseline']
+  #       exclude: package.lock.json
+
+    - repo: https://github.com/sirosen/texthooks
+      rev: 0.3.1
+      hooks:
+          - id: fix-smartquotes
+          - id: fix-ligatures
 
   # Ansible
 
@@ -52,105 +62,162 @@ repos:
 
   # Docker
 
-  - repo: https://github.com/IamTheFij/docker-pre-commit
-    rev: v2.0.0
-    hooks:
-      - id: docker-compose-check
+    - repo: https://github.com/IamTheFij/docker-pre-commit
+      rev: v2.1.0
+      hooks:
+          - id: docker-compose-check
 
-  - repo: https://github.com/pryorda/dockerfilelint-precommit-hooks
-    rev: v0.1.0
-    hooks:
-      - id: dockerfilelint
-        stages: [commit]
+    - repo: https://github.com/pryorda/dockerfilelint-precommit-hooks
+      rev: v0.1.0
+      hooks:
+          - id: dockerfilelint
+            stages: [commit]
 
-  - repo: https://github.com/hadolint/hadolint
-    rev: v2.1.0
-    hooks:
-      - id: hadolint
+    - repo: https://github.com/hadolint/hadolint
+      rev: v2.10.0
+      hooks:
+          - id: hadolint
 
   # Git
 
-  - repo: https://github.com/jorisroovers/gitlint
-    rev: v0.15.0
-    hooks:
-      - id: gitlint
-
-  - repo: https://github.com/sirosen/check-jsonschema
-    rev: 0.3.0
-    hooks:
-      - id: check-github-workflows
+    - repo: https://github.com/jorisroovers/gitlint
+      rev: v0.17.0
+      hooks:
+          - id: gitlint
 
   # Jinja
 
-  - repo: https://github.com/motet-a/jinjalint
-    rev: 01e0a4d  # pre-commit support is not tagged.
-    hooks:
-      - id: jinjalint
+  # - repo: https://github.com/motet-a/jinjalint
+  #   rev: 01e0a4d  # pre-commit support is not tagged.
+  #   hooks:
+  #     - id: jinjalint
 
   # Markdown
 
-  - repo: https://github.com/executablebooks/mdformat
-    rev: 0.6.4
-    hooks:
-      - id: mdformat
-        additional_dependencies:
-          - mdformat-beautysh
-          - mdformat-black
-          - mdformat-config
+    - repo: https://github.com/executablebooks/mdformat
+      rev: 0.7.14
+      hooks:
+          - id: mdformat
+            additional_dependencies:
+                - mdformat-beautysh
+                - mdformat-black
+                - mdformat-config
+                - mdformat-deflist
           # - mdformat-frontmatter  # Breaks.
-          - mdformat-gfm
-          - mdformat-shfmt
-          - mdformat-tables
-          - mdformat-toc
+                - mdformat-footnote
+                - mdformat-gfm
+                - mdformat-shfmt
+                - mdformat-tables
+                - mdformat-toc
 
   # Python
 
-  - repo: https://github.com/asottile/add-trailing-comma
-    rev: v2.1.0
-    hooks:
-      - id: add-trailing-comma
+    - repo: https://github.com/pycqa/pydocstyle
+      rev: 6.1.1
+      hooks:
+          - id: pydocstyle
 
-  - repo: https://github.com/PyCQA/bandit  # Add badge to README!
-    rev: '1.7.0'
-    hooks:
-      - id: bandit
+    - repo: https://github.com/asottile/add-trailing-comma
+      rev: v2.2.2
+      hooks:
+          - id: add-trailing-comma
 
-  - repo: https://github.com/Lucas-C/pre-commit-hooks-safety
-    rev: v1.2.1
-    hooks:
-      - id: python-safety-dependencies-check
+    - repo: https://github.com/PyCQA/bandit # Add badge to README!
+      rev: 1.7.4
+      hooks:
+          - id: bandit
 
-  - repo: https://gitlab.com/smop/pre-commit-hooks
-    rev: v1.0.0
-    hooks:
-      - id: check-poetry
+    - repo: https://github.com/asottile/dead
+      rev: v1.4.0
+      hooks:
+          - id: dead
 
-  - repo: https://github.com/jazzband/pip-tools
-    rev: 6.0.1
-    hooks:
-      - id: pip-compile
-        files: ^requirements/production\.(in|txt)$
-        args: [requirements/production.in]
+    - repo: https://github.com/pre-commit/mirrors-pylint
+      rev: v3.0.0a4
+      hooks:
+          - id: pylint
 
-  - repo: https://github.com/asottile/pyupgrade
+    - repo: https://github.com/psf/black
+      rev: 22.3.0
+      hooks:
+          - id: black
+
+    - repo: https://github.com/hadialqattan/pycln
+      rev: v1.2.5 # Possible releases: https://github.com/hadialqattan/pycln/releases
+      hooks:
+          - id: pycln
+
+    - repo: https://github.com/pycqa/isort
+      rev: 5.10.1
+      hooks:
+          - id: isort
+            name: isort (python)
+
+    - repo: https://github.com/Lucas-C/pre-commit-hooks-safety
+      rev: v1.2.4
+      hooks:
+          - id: python-safety-dependencies-check
+
+    - repo: https://github.com/MarcoGorelli/absolufy-imports
+      rev: v0.3.1
+      hooks:
+          - id: absolufy-imports
+
+    - repo: https://github.com/pre-commit/pygrep-hooks
+      rev: v1.9.0
+      hooks:
+          - id: python-check-blanket-noqa
+          - id: python-check-blanket-type-ignore
+          - id: python-check-mock-methods
+          - id: python-no-eval
+          - id: python-no-log-warn
+          - id: python-use-type-annotations
+          - id: rst-backticks
+          - id: rst-directive-colons
+          - id: rst-inline-touching-normal
+          - id: text-unicode-replacement-char
+
+    - repo: https://gitlab.com/smop/pre-commit-hooks
+      rev: v1.0.0
+      hooks:
+          - id: check-poetry # Validates the structure of the pyproject.toml file.
+
+    - repo: https://github.com/pre-commit/mirrors-mypy
+      rev: v0.942
+      hooks:
+          - id: mypy
+
+    - repo: https://github.com/jazzband/pip-tools
+      rev: 6.5.1
+      hooks:
+          - id: pip-compile
+            files: ^requirements/production\.(in|txt)$
+            args: [requirements/production.in]
+
+    - repo: https://github.com/asottile/pyupgrade
     # Automatically upgrade syntax for newer versions of the language.
-    rev: v2.11.0
-    hooks:
-      - id: pyupgrade
+      rev: v2.31.1
+      hooks:
+          - id: pyupgrade
 
   # YAML
 
-  - repo: https://github.com/adrienverge/yamllint
-    rev: v1.26.1
-    hooks:
-      - id: yamllint
-        args: [-c=.yamllint.yml]
+    - repo: https://github.com/adrienverge/yamllint
+      rev: v1.26.3
+      hooks:
+          - id: yamllint
+            args: [-c=.yamllint.yml]
+
+    - repo: https://github.com/jumanjihouse/pre-commit-hook-yamlfmt
+      rev: 0.1.1
+      hooks:
+          - id: yamlfmt
 
   # Mixed
 
-  - repo: https://github.com/jumanjihouse/pre-commit-hooks
-    rev: 2.1.5
-    hooks:
+    - repo: https://github.com/jumanjihouse/pre-commit-hooks
+      rev: 2.1.6
+      hooks:
       # - id: bundler-audit  # FIXME: Fix ruby hooks
       # - id: check-mailmap
       # - id: fasterer
@@ -161,15 +228,22 @@ repos:
       # - id: reek
       # - id: require-ascii
       # - id: rubocop
-      - id: script-must-have-extension
-      - id: script-must-not-have-extension
-      - id: shellcheck
-        args: ['--external-sources', '--format=gcc', '--shell=bash']
-      - id: shfmt
+          - id: script-must-have-extension
+          - id: script-must-not-have-extension
+          - id: shellcheck
+            args: [--external-sources, --format=gcc, --shell=bash]
+          - id: shfmt
 
-  - repo: https://github.com/Lucas-C/pre-commit-hooks
-    rev: v1.1.9
-    hooks:
-      - id: remove-crlf
-      - id: remove-tabs
-        exclude: .git/COMMIT_EDITMSG
+    - repo: https://github.com/Lucas-C/pre-commit-hooks
+      rev: v1.1.13
+      hooks:
+          - id: remove-crlf
+          - id: remove-tabs
+            exclude: .git/COMMIT_EDITMSG
+
+    - repo: https://github.com/sirosen/check-jsonschema
+      rev: 0.14.2
+      hooks:
+          - id: check-github-actions
+          - id: check-github-workflows
+          - id: check-readthedocs
