--- a/copier-python-template/.pre-commit-config.yaml
+++ b/copier-python-template/.pre-commit-config.yaml
@@ -51,14 +51,18 @@ repos:
           - id: fix-smartquotes
           - id: fix-ligatures
 
+    - repo: https://github.com/pre-commit/mirrors-prettier
+      rev: v2.6.2
+      hooks:
+          - id: prettier
+            stages: [commit]
+
   # Ansible
 
-  #  - repo: https://github.com/ansible-community/ansible-lint.git
-  #    rev: v5.0.7
-  #    hooks:
-  #      - id: ansible-lint
-  #        args: ['--offline']  # FIXME: Take out once I figure out how to authenticate.
-  #        files: \.(yaml|yml)$
+    - repo: https://github.com/ansible-community/ansible-lint.git
+      rev: v6.2.2
+      hooks:
+          - id: ansible-lint
 
   # Docker
 
@@ -84,6 +88,12 @@ repos:
       rev: v0.17.0
       hooks:
           - id: gitlint
+
+    - repo: https://github.com/commitizen-tools/commitizen
+      rev: v2.27.1
+      hooks:
+          - id: commitizen
+            stages: [commit-msg]
 
   # Jinja
 
@@ -142,8 +152,12 @@ repos:
       hooks:
           - id: black
 
+    - repo: https://gitlab.com/PyCQA/flake8
+      rev: 3.9.2
+      hooks:
+          - id: flake8
     - repo: https://github.com/hadialqattan/pycln
-      rev: v1.3.2 # Possible releases: https://github.com/hadialqattan/pycln/releases
+      rev: v1.3.3 # Possible releases: https://github.com/hadialqattan/pycln/releases
       hooks:
           - id: pycln
 
@@ -183,12 +197,12 @@ repos:
           - id: check-poetry # Validates the structure of the pyproject.toml file.
 
     - repo: https://github.com/pre-commit/mirrors-mypy
-      rev: v0.950
+      rev: v0.960
       hooks:
           - id: mypy
 
     - repo: https://github.com/jazzband/pip-tools
-      rev: 6.6.1
+      rev: 6.6.2
       hooks:
           - id: pip-compile
             files: ^requirements/production\.(in|txt)$
@@ -242,7 +256,7 @@ repos:
             exclude: .git/COMMIT_EDITMSG
 
     - repo: https://github.com/sirosen/check-jsonschema
-      rev: 0.15.0
+      rev: 0.16.0
       hooks:
           - id: check-github-actions
           - id: check-github-workflows
