--- a/copier-python-template/.github/workflows/cronjobs.yml
+++ b/copier-python-template/.github/workflows/cronjobs.yml
@@ -5,14 +5,13 @@ name: Cron Jobs
 on:
   schedule:
     # every day at midnight
-    - cron: "0 0 * * *"
+    - cron: '0 0 * * *'
   # Run workflow manually (without waiting for the cron to be called),
   # through the Github Actions Workflow page directly.
   workflow_dispatch:
 
 jobs:
   cronjobs:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -42,7 +41,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           branch: update/pre-commit-hooks
           title: Update pre-commit hooks
-          commit-message: "Auto-update pre-commit hooks"
+          commit-message: 'Auto-update pre-commit hooks'
           body: Update versions of pre-commit hooks to latest version.
 
       - name: Mark Stale Issues
