--- a/copier-python-template/.github/workflows/pull-requests-and-pushes.yml
+++ b/copier-python-template/.github/workflows/pull-requests-and-pushes.yml
@@ -5,7 +5,6 @@ name: Pull Requests & Pushes
 on: [push, pull_request]
 
 jobs:
-
   github-actions:
     name: GitHub Actions
     runs-on: ubuntu-latest
@@ -52,7 +51,7 @@ jobs:
         uses: reviewdog/action-misspell@v1
         with:
           github_token: ${{ secrets.github_token }}
-          locale: "US"
+          locale: 'US'
 
       # - name: pre-commit
       #   uses: pre-commit/action@v2.0.2
@@ -60,12 +59,12 @@ jobs:
       - name: shellcheck
         uses: reviewdog/action-shellcheck@v1
         with:
-          exclude: "./.git/*"  # Optional.
+          exclude: './.git/*' # Optional.
           fail_on_error: false
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          path: "."
-          pattern: "*.sh"  # Optional.
-          reporter: github-pr-review  # Change reporter.
+          path: '.'
+          pattern: '*.sh' # Optional.
+          reporter: github-pr-review # Change reporter.
           shellcheck_flags: '--external-sources --format=gcc --shell=bash'
 
       - name: yamllint
