--- a/copier-python-template/.pre-commit-config.yaml
+++ b/copier-python-template/.pre-commit-config.yaml
@@ -1,5 +1,5 @@
 ---
-# Add the pre-commit badge to the README!
+# files: 'directory1/directory2'
 
 # Which of these should have stages?
 
@@ -51,7 +51,7 @@ repos:
           - id: fix-ligatures
 
     - repo: https://github.com/pre-commit/mirrors-prettier
-      rev: v2.6.2
+      rev: v2.7.1
       hooks:
           - id: prettier
             stages: [commit]
@@ -62,6 +62,9 @@ repos:
       rev: v6.3.0
       hooks:
           - id: ansible-lint
+            stages:
+                - commit
+                - push
 
     # Docker
 
@@ -89,7 +92,7 @@ repos:
           - id: gitlint
 
     - repo: https://github.com/commitizen-tools/commitizen
-      rev: v2.27.1
+      rev: v2.29.0
       hooks:
           - id: commitizen
             stages: [commit-msg]
@@ -147,7 +150,7 @@ repos:
           - id: pylint
 
     - repo: https://github.com/psf/black
-      rev: 22.3.0
+      rev: 22.6.0
       hooks:
           - id: black
 
@@ -155,8 +158,9 @@ repos:
       rev: 3.9.2
       hooks:
           - id: flake8
+
     - repo: https://github.com/hadialqattan/pycln
-      rev: v1.3.3 # Possible releases: https://github.com/hadialqattan/pycln/releases
+      rev: v2.0.4 # Possible releases: https://github.com/hadialqattan/pycln/releases
       hooks:
           - id: pycln
 
@@ -167,7 +171,7 @@ repos:
             name: isort (python)
 
     - repo: https://github.com/Lucas-C/pre-commit-hooks-safety
-      rev: v1.2.4
+      rev: v1.3.0
       hooks:
           - id: python-safety-dependencies-check
 
@@ -196,12 +200,12 @@ repos:
           - id: check-poetry # Validates the structure of the pyproject.toml file.
 
     - repo: https://github.com/pre-commit/mirrors-mypy
-      rev: v0.961
+      rev: v0.971
       hooks:
           - id: mypy
 
     - repo: https://github.com/jazzband/pip-tools
-      rev: 6.6.2
+      rev: 6.8.0
       hooks:
           - id: pip-compile
             files: ^requirements/production\.(in|txt)$
@@ -209,14 +213,15 @@ repos:
 
     - repo: https://github.com/asottile/pyupgrade
       # Automatically upgrade syntax for newer versions of the language.
-      rev: v2.34.0
+      rev: v2.37.2
       hooks:
           - id: pyupgrade
+            args: [--py39-plus] # Update if I change the python3 version.
 
     # YAML
 
     - repo: https://github.com/adrienverge/yamllint
-      rev: v1.26.3
+      rev: v1.27.1
       hooks:
           - id: yamllint
             args: [-c=.yamllint.yml]
@@ -225,6 +230,21 @@ repos:
     #   rev: 0.2.1
     #   hooks:
     #       - id: yamlfmt
+
+    # SQL
+
+    - repo: https://github.com/sqlfluff/sqlfluff
+      rev: 1.2.1
+      hooks:
+          - id: sqlfluff-lint
+            # For dbt projects, this installs the dbt "extras".
+            # You will need to select the relevant dbt adapter for your dialect
+            # (https://docs.getdbt.com/docs/available-adapters):
+            # additional_dependencies: ['<dbt-adapter>', 'sqlfluff-templater-dbt']
+          - id: sqlfluff-fix
+            # Arbitrary arguments to show an example
+            # args: [--rules, "L003,L014"]
+            # additional_dependencies: ['<dbt-adapter>', 'sqlfluff-templater-dbt']
 
     # Mixed
 
@@ -248,14 +268,14 @@ repos:
           - id: shfmt
 
     - repo: https://github.com/Lucas-C/pre-commit-hooks
-      rev: v1.2.0
+      rev: v1.3.0
       hooks:
           - id: remove-crlf
           - id: remove-tabs
             exclude: .git/COMMIT_EDITMSG
 
     - repo: https://github.com/sirosen/check-jsonschema
-      rev: 0.16.0
+      rev: 0.17.1
       hooks:
           - id: check-github-actions
           - id: check-github-workflows
