Update config files

--- a/copier-python-template/.deadpendency/config.yaml
+++ b/copier-python-template/.deadpendency/config.yaml
@@ -66,6 +66,7 @@ ignore-failures:
         - jekyll-paginate
         - jekyll-sitemap
         - jemoji
+        - mdl
         - ruby-lint
         - terminal-notifier
         - wdm
