--- a/copier-python-template/.pre-commit-config.yaml
+++ b/copier-python-template/.pre-commit-config.yaml
@@ -45,13 +45,13 @@ repos:
     #       exclude: package.lock.json
 
     - repo: https://github.com/sirosen/texthooks
-      rev: 0.3.1
+      rev: 0.4.0
       hooks:
           - id: fix-smartquotes
           - id: fix-ligatures
 
     - repo: https://github.com/pre-commit/mirrors-prettier
-      rev: v2.7.1
+      rev: v3.0.0-alpha.0
       hooks:
           - id: prettier
             stages: [commit]
@@ -59,7 +59,7 @@ repos:
     # Ansible
 
     - repo: https://github.com/ansible-community/ansible-lint.git
-      rev: v6.3.0
+      rev: v6.5.2
       hooks:
           - id: ansible-lint
             stages:
@@ -92,7 +92,7 @@ repos:
           - id: gitlint
 
     - repo: https://github.com/commitizen-tools/commitizen
-      rev: v2.29.0
+      rev: v2.32.3
       hooks:
           - id: commitizen
             stages: [commit-msg]
@@ -144,13 +144,60 @@ repos:
       hooks:
           - id: dead
 
+    - repo: https://github.com/carstencodes/flake518 # Wrapper around flake8 to support pyproject.toml files.
+      rev: 'v1.2.3'
+      hooks:
+          - id: flake518
+            additional_dependencies:
+                - cohesion
+                - flake8-annotations-complexity
+                - flake8-annotations-coverage
+                - flake8-assertive
+                - flake8-bandit
+                - flake8-broken-line
+                - flake8-bugbear
+                - flake8-builtins
+                - flake8-coding
+                - flake8-commas
+                - flake8-comprehensions
+                - flake8-debugger
+                - flake8-deprecated
+                - flake8-docstrings
+                - flake8_dodgy
+                - flake8-eradicate
+                - flake8-fixme
+                - flake8-future-import
+                - flake8-import-order
+                - flake8-imports
+                - flake8-isort
+                - flake8-logging-format
+                - flake8-mock
+                - flake8-mutable
+                - flake8-mypy
+                - flake8-pep3101
+                - flake8-print
+                - flake8-pyi
+                - flake8-quotes
+                - flake8-spellcheck
+                - flake8-strict
+                - flake8-string-format
+                - flake8-tidy-imports
+                - flake8-variables-names
+                - flake8_tuple
+                - pep8-naming
+
+    - repo: https://github.com/jendrikseipp/vulture
+      rev: v2.5
+      hooks:
+          - id: vulture
+
     - repo: https://github.com/pre-commit/mirrors-pylint
       rev: v3.0.0a5
       hooks:
           - id: pylint
 
     - repo: https://github.com/psf/black
-      rev: 22.6.0
+      rev: 22.8.0
       hooks:
           - id: black
 
@@ -160,7 +207,7 @@ repos:
           - id: flake8
 
     - repo: https://github.com/hadialqattan/pycln
-      rev: v2.0.4 # Possible releases: https://github.com/hadialqattan/pycln/releases
+      rev: v2.1.1 # Possible releases: https://github.com/hadialqattan/pycln/releases
       hooks:
           - id: pycln
 
@@ -213,7 +260,7 @@ repos:
 
     - repo: https://github.com/asottile/pyupgrade
       # Automatically upgrade syntax for newer versions of the language.
-      rev: v2.37.2
+      rev: v2.37.3
       hooks:
           - id: pyupgrade
             args: [--py39-plus] # Update if I change the python3 version.
@@ -234,7 +281,7 @@ repos:
     # SQL
 
     - repo: https://github.com/sqlfluff/sqlfluff
-      rev: 1.2.1
+      rev: 1.3.0
       hooks:
           - id: sqlfluff-lint
             # For dbt projects, this installs the dbt "extras".
@@ -249,7 +296,7 @@ repos:
     # Mixed
 
     - repo: https://github.com/jumanjihouse/pre-commit-hooks
-      rev: 2.1.6
+      rev: 3.0.0
       hooks:
           # - id: bundler-audit  # FIXME: Fix ruby hooks
           # - id: check-mailmap
@@ -268,14 +315,14 @@ repos:
           - id: shfmt
 
     - repo: https://github.com/Lucas-C/pre-commit-hooks
-      rev: v1.3.0
+      rev: v1.3.1
       hooks:
           - id: remove-crlf
           - id: remove-tabs
             exclude: .git/COMMIT_EDITMSG
 
     - repo: https://github.com/sirosen/check-jsonschema
-      rev: 0.17.1
+      rev: 0.18.2
       hooks:
           - id: check-github-actions
           - id: check-github-workflows
