--- a/copier-python-template/.deadpendency/config.yaml
+++ b/copier-python-template/.deadpendency/config.yaml
@@ -34,9 +34,11 @@ ignore-failures:
         - jupyter
         - jupyter-contrib-core
         - jupyter-contrib-nbextensions
+        - keras-preprocessing
         - markupsafe
         - mccabe
         - mistune
+        - opt-einsum
         - patsy
         - pexpect
         - pickleshare
