--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -78,7 +78,7 @@ repos:
           - id: pydocstyle
 
     - repo: https://github.com/pre-commit/mirrors-mypy
-      rev: v0.971
+      rev: v0.981
       hooks:
           - id: mypy
 
@@ -109,7 +109,7 @@ repos:
           - id: text-unicode-replacement-char
 
     - repo: https://github.com/asottile/add-trailing-comma
-      rev: v2.2.3
+      rev: v2.3.0
       hooks:
           - id: add-trailing-comma
 
@@ -126,7 +126,7 @@ repos:
 
     - repo: https://github.com/asottile/pyupgrade
       # Automatically upgrade syntax for newer versions of the language.
-      rev: v2.38.0
+      rev: v2.38.2
       hooks:
           - id: pyupgrade
 
@@ -172,3 +172,18 @@ repos:
             entry: found copier update rejection files; review them and remove them (https://copier.readthedocs.io/en/stable/updating/)
             language: fail
             files: \.rej$
+
+    - repo: https://github.com/zricethezav/gitleaks
+      rev: v8.12.0
+      hooks:
+          - id: gitleaks
+
+    - repo: https://github.com/rhysd/actionlint
+      rev: v1.6.19
+      hooks:
+          - id: actionlint
+
+    - repo: https://github.com/editorconfig-checker/editorconfig-checker.python
+      rev: 2.6.1
+      hooks:
+          - id: editorconfig-checker
