--- a/copier-python-template/.pre-commit-config.yaml
+++ b/copier-python-template/.pre-commit-config.yaml
@@ -59,7 +59,7 @@ repos:
     # Ansible
 
     - repo: https://github.com/ansible-community/ansible-lint.git
-      rev: v6.6.1
+      rev: v6.7.0
       hooks:
           - id: ansible-lint
             stages:
@@ -92,7 +92,7 @@ repos:
           - id: gitlint
 
     - repo: https://github.com/commitizen-tools/commitizen
-      rev: v2.34.0
+      rev: v2.35.0
       hooks:
           - id: commitizen
             stages: [commit-msg]
@@ -130,7 +130,7 @@ repos:
           - id: pydocstyle
 
     - repo: https://github.com/asottile/add-trailing-comma
-      rev: v2.2.3
+      rev: v2.3.0
       hooks:
           - id: add-trailing-comma
 
@@ -247,7 +247,7 @@ repos:
           - id: check-poetry # Validates the structure of the pyproject.toml file.
 
     - repo: https://github.com/pre-commit/mirrors-mypy
-      rev: v0.971
+      rev: v0.981
       hooks:
           - id: mypy
 
@@ -260,7 +260,7 @@ repos:
 
     - repo: https://github.com/asottile/pyupgrade
       # Automatically upgrade syntax for newer versions of the language.
-      rev: v2.38.0
+      rev: v2.38.2
       hooks:
           - id: pyupgrade
             args: [--py39-plus] # Update if I change the python3 version.
@@ -281,7 +281,7 @@ repos:
     # SQL
 
     - repo: https://github.com/sqlfluff/sqlfluff
-      rev: 1.3.1
+      rev: 1.3.2
       hooks:
           - id: sqlfluff-lint
             # For dbt projects, this installs the dbt "extras".
@@ -327,3 +327,18 @@ repos:
           - id: check-github-actions
           - id: check-github-workflows
           - id: check-readthedocs
+
+    - repo: https://github.com/zricethezav/gitleaks
+      rev: v8.12.0
+      hooks:
+          - id: gitleaks
+
+    - repo: https://github.com/rhysd/actionlint
+      rev: v1.6.19
+      hooks:
+          - id: actionlint
+
+    - repo: https://github.com/editorconfig-checker/editorconfig-checker.python
+      rev: 2.6.1
+      hooks:
+          - id: editorconfig-checker
