--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,7 +21,6 @@ repos:
 
           # Json
           - id: check-json
-          - id: pretty-format-json # Checks that all your JSON files are pretty.
 
           # Python
           - id: check-ast # Check whether files parse as valid python.
@@ -32,7 +31,7 @@ repos:
     # General
 
     - repo: https://github.com/pre-commit/mirrors-prettier
-      rev: v3.0.0-alpha.0
+      rev: v3.0.0-alpha.2
       hooks:
           - id: prettier
             stages: [commit]
@@ -53,7 +52,7 @@ repos:
     # Python
 
     - repo: https://github.com/psf/black
-      rev: 22.8.0
+      rev: 22.10.0
       hooks:
           - id: black
 
@@ -78,12 +77,12 @@ repos:
           - id: pydocstyle
 
     - repo: https://github.com/pre-commit/mirrors-mypy
-      rev: v0.981
+      rev: v0.982
       hooks:
           - id: mypy
 
     - repo: https://github.com/jazzband/pip-tools
-      rev: 6.8.0
+      rev: 6.9.0
       hooks:
           - id: pip-compile
             files: ^requirements/production\.(in|txt)$
@@ -126,7 +125,7 @@ repos:
 
     - repo: https://github.com/asottile/pyupgrade
       # Automatically upgrade syntax for newer versions of the language.
-      rev: v2.38.2
+      rev: v3.1.0
       hooks:
           - id: pyupgrade
 
@@ -174,16 +173,15 @@ repos:
             files: \.rej$
 
     - repo: https://github.com/zricethezav/gitleaks
-      rev: v8.12.0
+      rev: v8.15.0
       hooks:
           - id: gitleaks
 
     - repo: https://github.com/rhysd/actionlint
-      rev: v1.6.19
+      rev: v1.6.21
       hooks:
           - id: actionlint
-
-    - repo: https://github.com/editorconfig-checker/editorconfig-checker.python
-      rev: 2.6.1
-      hooks:
-          - id: editorconfig-checker
+#    - repo: https://github.com/editorconfig-checker/editorconfig-checker.python
+#      rev: 2.6.1
+#      hooks:
+#          - id: editorconfig-checker
