Address linter warnings

--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -10,7 +10,9 @@ DISABLE:
   - EDITORCONFIG # FIXME: Figure out why not working!?
 DISABLE_LINTERS:
   - BASH_SHELLCHECK
+  - REPOSITORY_DEVSKIM
 FILEIO_REPORTER: true
 JSON_V8R_DISABLE_ERRORS: true
 LINTER_RULES_PATH: .
+PYTHON_BANDIT_CONFIG_FILE: pyproject.toml
 SHOW_ELAPSED_TIME: true
