--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,6 @@
+[tool.bandit.assert_used]
+skips = ['*_test.py', '*test_*.py', '*unittest.py']
+
 [tool.poetry]
 name = "copier-python-template"
 version = "0.0.1"
