Address linter warnings

--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -8,6 +8,7 @@ DISABLE:
   - ACTION # FIXME: Figure out why doesn't run!
   - COPYPASTE
   - EDITORCONFIG # FIXME: Figure out why not working!?
+  - PYTHON
 DISABLE_LINTERS:
   - BASH_SHELLCHECK
   - REPOSITORY_DEVSKIM
@@ -15,4 +16,5 @@ FILEIO_REPORTER: true
 JSON_V8R_DISABLE_ERRORS: true
 LINTER_RULES_PATH: .
 PYTHON_BANDIT_CONFIG_FILE: pyproject.toml
+PYTHON_FLAKE8_CONFIG_FILE: tox.ini
 SHOW_ELAPSED_TIME: true
