--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -51,6 +51,11 @@ repos:
 
     # Python
 
+    #    - repo: https://github.com/RobertCraigie/pyright-python
+    #      rev: v1.1.237
+    #      hooks:
+    #          - id: pyright
+
     - repo: https://github.com/psf/black
       rev: 22.10.0
       hooks:
