--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,9 @@ readme = "README.md"
 python = "^3.9"
 
 [tool.poetry.dev-dependencies]
-pytest = "^6.2"
 copier = "^5.1.0"
+pyright = "^1.1.275"
+pytest = "^6.2"
 yamllint = "^1.26.3"
 
 [tool.poetry.urls]
