Update config files

--- a/.github/deadpendency.yaml
+++ b/.github/deadpendency.yaml
@@ -30,6 +30,7 @@ ignore-failures:
         - future
         - google-pasta
         - imagesize
+        - iniconfig
         - ipython-genutils
         - jupyter
         - jupyter-contrib-core
