--- a/copier-python-template/.pre-commit-config.yaml
+++ b/copier-python-template/.pre-commit-config.yaml
@@ -144,7 +144,7 @@ repos:
       hooks:
           - id: add-trailing-comma
 
-    - repo: https://github.com/PyCQA/bandit # Add badge to README!
+    - repo: https://github.com/PyCQA/bandit
       rev: 1.7.4
       hooks:
           - id: bandit
