Update config files

--- a/.github/deadpendency.yaml
+++ b/.github/deadpendency.yaml
@@ -57,6 +57,7 @@ ignore-failures:
         - sphinxcontrib-qthelp
         - termcolor
         - testpath
+        - toml
         - vobject
         - wcwidth
         - webencodings
