--- a/copier-python-template/.github/deadpendency.yaml
+++ b/copier-python-template/.github/deadpendency.yaml
@@ -58,6 +58,7 @@ ignore-failures:
         - sphinxcontrib-qthelp
         - termcolor
         - testpath
+        - toml
         - vobject
         - wcwidth
         - webencodings
