--- a/copier-python-template/.pre-commit-config.yaml
+++ b/copier-python-template/.pre-commit-config.yaml
@@ -110,6 +110,9 @@ repos:
       rev: v3.10.3
       hooks:
           - id: markdown-link-check
+            args:
+                - --config
+                - .markdown-link-check.json
 
     # - repo: https://github.com/executablebooks/mdformat
     #   rev: 0.7.14
@@ -128,6 +131,11 @@ repos:
     #             - mdformat-toc
 
     # Python
+
+    - repo: https://github.com/MarcoGorelli/auto-walrus
+      rev: v0.2.1
+      hooks:
+          - id: auto-walrus
 
     - repo: https://github.com/RobertCraigie/pyright-python
       rev: v1.1.237
