--- a/copier-python-template/.pre-commit-config.yaml
+++ b/copier-python-template/.pre-commit-config.yaml
@@ -460,3 +460,12 @@ repos:
       rev: 2.1.273
       hooks:
           - id: checkov
+
+    - repo: https://github.com/mxab/pre-commit-trivy.git
+      rev: v0.2.0
+      hooks:
+          - id: trivyfs-docker
+            args:
+                - --ignore-unfixed
+                - . # last arg indicates the path/file to scan
+            stages: [push]
